--- a/www/index.html
+++ b/www/index.html
@@ -8,16 +8,23 @@
     <body>
         <nav>
             <div class="nav"><a href="index.html">Home</a></div>
-            <div class="nav"><a href="">Products</a></div>
+            <div class="nav"><a href="products.html">Products</a></div>
             <div id="navHeader">Byron Supply Company</div>
             <div id="navHeaderSmall">BSC</div>
-            <div class="nav"><a href="">Cart</a></div>
-            <div class="nav"><a href="">Account</a></div>
+            <div class="nav"><a href="cart.html">Cart</a></div>
+            <div class="nav"><a href="account.html">Account</a></div>
         </nav>
-        <div></div>
+        <div id="welcomeBanner">Welcome Back, User!</div>
+        
+        <div id="slides">
+            <img src="./images/rattan-outdoor-furniture-bangkok.jpg">
+            <img src="./images/furniture-str-LR-wide-201706.jpg">
+            <img src="./images/10-best-kitchen-supplies-amazing-kitchen-supplies-.jpg">
+          </div>
+        
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
-        <script src="js/byron_supply_company.js"></script>
+        <script src="./js/jquery.slides.min.js"></script>
+        <script src="./js/index.js"></script>
     </body>
     <footer>
     </footer>
