Set up servlet, added website

--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>Byron Supply Company</title>
         <link href="./css/byron_supply_company.css" rel="stylesheet">
+        <link href="./css/index.css" rel="stylesheet">
+
     </head>
     <body>
         <nav>
@@ -15,15 +17,8 @@
             <div class="nav"><a href="account.html">Account</a></div>
         </nav>
         <div id="welcomeBanner">Welcome Back, User!</div>
-        
-        <div id="slides">
-            <img src="./images/rattan-outdoor-furniture-bangkok.jpg">
-            <img src="./images/furniture-str-LR-wide-201706.jpg">
-            <img src="./images/10-best-kitchen-supplies-amazing-kitchen-supplies-.jpg">
-          </div>
-        
+
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src="./js/jquery.slides.min.js"></script>
         <script src="./js/index.js"></script>
     </body>
     <footer>
