--- a/web/cart.html
+++ b/web/cart.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Byron Supply Company</title>
-        <link href="/css/byron_supply_company.css" rel="stylesheet">
-        <link href="/css/cart.css" rel="stylesheet">
+        <link href="./css/byron_supply_company.css" rel="stylesheet">
+        <link href="./css/cart.css" rel="stylesheet">
     </head>
     <body>
         <nav>
