--- a/djClassProject/src/main/webapp/index.xhtml
+++ b/djClassProject/src/main/webapp/index.xhtml
@@ -10,8 +10,8 @@
             <f:facet name="first">
                 <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
                 <title>Byron Supply Company</title>
-                <link rel="stylesheet" type="text/css" href="./css/byron_supply_company.css" />
-                <link rel="stylesheet" type="text/css" href="./css/index.css" />
+                <h:outputStylesheet name="css/byron_supply_company.css"/>
+                <h:outputStylesheet name="css/index.css"/>
             </f:facet>
         </h:head>
 
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div id="hero">
-                <p:graphicImage name="image/kitchenUtensils.png"/>
+                <h:graphicImage name="images/kitchenUtensils.png"/>
             </div>
             <div>
                 <p>Welcome to Byron Supply Company, where you can find all of your stylish, household needs.</p>
