--- a/djClassProject/src/main/webapp/productDetails.xhtml
+++ b/djClassProject/src/main/webapp/productDetails.xhtml
@@ -1,12 +1,52 @@
-<?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title><h:outputText value="BSC: #{productBean.PRODUCT_SERVICE.getProduct(param['id']).name}"/></title>
-    </h:head>
-    <h:body>
-        Hello from Facelets
-    </h:body>
-</html>
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
 
+    <f:view contentType="text/html">
+        <h:head>
+            <f:facet name="first">
+                <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
+                <title><h:outputText value="BSC: #{productBean.PRODUCT_SERVICE.getProduct(param['id']).name}"/></title>
+                <h:outputStylesheet name="css/byron_supply_company.css"/>
+                <h:outputStylesheet name="css/productDetails.css"/>
+            </f:facet>
+        </h:head>
+
+        <h:body>
+            <nav>
+                <h:link value="Home" outcome="index" class="nav"/>
+                <h:link value="Products" outcome="products" class="nav"/>
+                <div id="navHeader">Byron Supply Company</div>
+                <div id="navHeaderSmall">BSC</div>
+                <h:link value="Cart" outcome="cart" class="nav"/>
+                <h:link value="Account" outcome="account" class="nav"/>
+            </nav>
+            <div id="dummyNav"></div>
+            <div id="welcomeBannerBackground">
+                <div id="welcomeBanner">
+                    <div class="nav"><a href="login.jsp">Login</a></div>
+                    <div>|</div>
+                    <div class ="nav"><a href="register.jsp">Register</a></div>
+                </div>
+            </div>
+            <div id="pageLayout">
+                <div id="leftPanel"></div>
+                <div id="centerPanel">
+                    <div class="product">
+                        <h:form>
+                            <h:graphicImage name="#{productBean.PRODUCT_SERVICE.getProduct(param['id']).image}" class="img"/>
+                            <h:outputText value="#{productBean.PRODUCT_SERVICE.getProduct(param['id']).name}" class="productName"/>
+                            <div class="longDescription"><h:outputText value="#{productBean.PRODUCT_SERVICE.getProduct(param['id']).longDescription}"/></div>
+                            <div><button type="submit" name="addToCart" class="addToCart">Add to Cart</button></div>
+                        </h:form>
+                    </div>
+                </div>
+                <div id="rightPanel"></div>
+            </div>
+
+        </h:body>
+    </f:view>
+</html>
