--- a/djClassProject/src/main/webapp/index.xhtml
+++ b/djClassProject/src/main/webapp/index.xhtml
@@ -21,7 +21,7 @@
                 <h:link value="Products" outcome="products" class="nav"/>
                 <div id="navHeader">Byron Supply Company</div>
                 <div id="navHeaderSmall">BSC</div>
-                <h:link value="Cart" outcome="cart" class="nav"/>
+                <h:link id="cartQuantity" value="Cart #{(cartBean.numberOfItemsInCart == 0) ? '' : cartBean.numberOfItemsInCart}" outcome="cart" class="nav"/>
                 <h:link value="Account" outcome="account" class="nav"/>
             </nav>
             <div id="dummyNav"></div>
