Created Spring Boot app.

--- a/djClassProjectSpringBoot/src/main/resources/META-INF/resources/account.xhtml
+++ b/djClassProjectSpringBoot/src/main/resources/META-INF/resources/account.xhtml
@@ -7,10 +7,12 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>BSC: Account</title>
+        <link href="byron_supply_company.css" rel="stylesheet"/>
+                <link href="account.css" rel="stylesheet"/>
     </h:head>
     <h:body>
         <nav>
-            <h:link value="Home" class="nav"/>
+            <h:link value="Home" outcome="index" class="nav"/>
             <h:link value="Products" outcome="products" class="nav"/>
             <div id="navHeader">Byron Supply Company</div>
             <div id="navHeaderSmall">BSC</div>
