--- a/djClassProjectSpringBoot/src/main/resources/META-INF/resources/index.xhtml
+++ b/djClassProjectSpringBoot/src/main/resources/META-INF/resources/index.xhtml
@@ -10,10 +10,8 @@
             <f:facet name="first">
                 <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
                 <title>Byron Supply Company</title>
-<!--                <h:outputStylesheet name="css/byron_supply_company.css"/>
-                <h:outputStylesheet name="css/index.css"/>-->
-                <link href="css/byron_supply_company.css" rel="stylesheet"/>
-                <link href="css/index.css" rel="stylesheet"/>
+                <link href="byron_supply_company.css" rel="stylesheet"/>
+                <link href="index.css" rel="stylesheet"/>
             </f:facet>
         </h:head>
 
@@ -35,7 +33,7 @@
                     <div class ="nav"><a href="//TODO">Register</a></div>
                 </div>
             </div>
-            <h:graphicImage id="hero" name="/images/kitchenUtensils.png"/>
+            <img id="hero" src="kitchenUtensils.png"/>
             <div>
                 <p>Welcome to Byron Supply Company, where you can find all of your stylish, household needs.</p>
             </div>
